[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/e_button_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Elevator/ElevatorButtonPanelUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/elevator_button_panel_ui.png" type="Texture" id=3]
[ext_resource path="res://Assets/e_button_0.png" type="Texture" id=4]
[ext_resource path="res://Assets/e_button_6.png" type="Texture" id=5]
[ext_resource path="res://Assets/e_button_3.png" type="Texture" id=6]
[ext_resource path="res://Assets/e_button_4.png" type="Texture" id=7]
[ext_resource path="res://Assets/e_button_alarm.png" type="Texture" id=8]
[ext_resource path="res://Assets/e_button_2.png" type="Texture" id=9]
[ext_resource path="res://Assets/e_button_5.png" type="Texture" id=10]

[node name="ElevatorPanelUI" type="CanvasLayer"]
pause_mode = 2
layer = 30
script = ExtResource( 2 )

[node name="UI" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 296.0
margin_right = -289.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
margin_left = 97.0
margin_top = 63.0
margin_right = 145.0
margin_bottom = 472.0
rect_scale = Vector2( 2.25, 2.25 )
custom_constants/separation = 1

[node name="0" type="Button" parent="UI/VBoxContainer"]
margin_right = 48.0
margin_bottom = 46.0
icon = ExtResource( 4 )
flat = true

[node name="2" type="Button" parent="UI/VBoxContainer"]
margin_top = 47.0
margin_right = 48.0
margin_bottom = 93.0
icon = ExtResource( 9 )
flat = true

[node name="4" type="Button" parent="UI/VBoxContainer"]
margin_top = 94.0
margin_right = 48.0
margin_bottom = 140.0
icon = ExtResource( 7 )
flat = true

[node name="6" type="Button" parent="UI/VBoxContainer"]
margin_top = 141.0
margin_right = 48.0
margin_bottom = 187.0
icon = ExtResource( 5 )
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="UI"]
margin_left = 234.0
margin_top = 62.0
margin_right = 282.0
margin_bottom = 471.0
rect_scale = Vector2( 2.25, 2.25 )
custom_constants/separation = 1

[node name="1" type="Button" parent="UI/VBoxContainer2"]
margin_right = 48.0
margin_bottom = 46.0
icon = ExtResource( 1 )
flat = true

[node name="3" type="Button" parent="UI/VBoxContainer2"]
margin_top = 47.0
margin_right = 48.0
margin_bottom = 93.0
icon = ExtResource( 6 )
flat = true

[node name="5" type="Button" parent="UI/VBoxContainer2"]
margin_top = 94.0
margin_right = 48.0
margin_bottom = 140.0
icon = ExtResource( 10 )
flat = true

[node name="alarm" type="Button" parent="UI/VBoxContainer2"]
margin_top = 141.0
margin_right = 48.0
margin_bottom = 187.0
icon = ExtResource( 8 )
flat = true

[connection signal="pressed" from="UI/VBoxContainer/0" to="." method="_on_0_pressed"]
[connection signal="button_up" from="UI/VBoxContainer/2" to="." method="_on_2_button_up"]
[connection signal="button_up" from="UI/VBoxContainer2/1" to="." method="_on_1_button_up"]
[connection signal="button_up" from="UI/VBoxContainer2/3" to="." method="_on_3_button_up"]
[connection signal="button_up" from="UI/VBoxContainer2/alarm" to="." method="_on_4_button_up"]
